# zk-eigentrust

./: .env.origin  .gitignore  Cargo.toml  README.md  reference.py  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  circuits.yml  client.yml  coverage.yml  server.yml  test.yml
bench/: Cargo.toml
bench/src/: main.rs
circuit/: Cargo.toml
circuit/src/: circuit.rs  ecdsa.rs  lib.rs  main.rs  native.rs  utils.rs
circuit/src/aggregator/: accumulation.rs  common_poly.rs  mod.rs  msm.rs  native.rs  protocol.rs  sets.rs  shplonk.rs  transcript.rs
circuit/src/dynamic_sets/: attest_native.rs  ecdsa_native.rs  mod.rs  native.rs
circuit/src/ecc/: generic.rs  mod.rs  native.rs  native_general_ecc.rs
circuit/src/ecc/generic/: ecdsa.rs  mod.rs  native.rs
circuit/src/ecc/same_curve/: mod.rs  native.rs
circuit/src/ecdsa/: mod.rs  native.rs
circuit/src/eddsa/: add.rs  eddsa_gadgets.rs  into_affine.rs  mod.rs  native.rs  scalar_mul.rs
circuit/src/eddsa/native/: ed_on_bn254.rs  mod.rs  ops.rs  reduce.rs
circuit/src/edwards/: mod.rs  native.rs  params.rs
circuit/src/gadgets/: absorb.rs  accumulate.rs  and.rs  bits2integer.rs  bits2num.rs  common.rs  is_boolean.rs  is_equal.rs  is_zero.rs  lt_eq.rs  lt_eq_const.rs  lt_eq_lookup.rs  main.rs  mod.rs  mul.rs  range.rs  region_test.rs  select.rs  set.rs  sum.rs  test.rs
circuit/src/integer/: mod.rs  native.rs  rns.rs
circuit/src/merkle_tree/: mod.rs  native.rs
circuit/src/opinion/: mod.rs  native.rs
circuit/src/params/: mod.rs  poseidon_bn254_10x5.rs  poseidon_bn254_5x5.rs  rescue_prime_bn254_5x5.rs
circuit/src/params/ecc/: bn254.rs  mod.rs  secp256k1.rs
circuit/src/params/hasher/: mod.rs  poseidon_bn254_10x5.rs  poseidon_bn254_5x5.rs  rescue_prime_bn254_5x5.rs
circuit/src/params/rns/: mod.rs  secp256k1.rs
circuit/src/poseidon/: mod.rs  native.rs  params.rs  sponge.rs  wrong.rs
circuit/src/poseidon/native/: mod.rs  sponge.rs
circuit/src/poseidon/params/: bn254_10x5.rs  bn254_5x5.rs  mod.rs
circuit/src/rescue_prime/: mod.rs  sponge.rs
circuit/src/rescue_prime/native/: mod.rs  sponge.rs
circuit/src/rns/: bn256.rs  mod.rs  secp256k1.rs
circuit/src/threshold/: mod.rs  native.rs
circuit/src/verifier/: aggregator.rs  loader.rs  mod.rs  msm.rs  queries.rs  transcript.rs
circuit/src/verifier/aggregator/: mod.rs
circuit/src/verifier/loader/: mod.rs  native.rs
circuit/src/verifier/transcript/: mod.rs  native.rs
circuit/src/wrong/: mod.rs  native.rs  rns.rs
cli/: Cargo.toml
cli/src/: bandada.rs  cli.rs  fs.rs  main.rs
client/: Cargo.toml  README.md
client/assets/: attestations.csv  client_config.json
client/contracts/: AttestationStation.sol
client/src/: att_station.rs  attest.rs  attestation.rs  bandada.rs  cli.rs  compile.rs  deploy.rs  error.rs  eth.rs  ethereum.rs  fs.rs  lib.rs  main.rs  manager.rs  sign.rs  storage.rs  transaction.rs  utils.rs
client/src/manager/: attestation.rs
contracts/: AttestationStation.json
data/: AttestationStation.json  AttestationStation.rs  EtVerifierWrapper.json  EtVerifierWrapper.rs  EtVerifierWrapper.sol  attestation_station.rs  attestations.csv  bootstrap-nodes.csv  bootstrap-nodes.txt  client-config.json  et_proof.json  et_proof_test.json  et_verifier.yul  et_verifier_wrapper.json  et_verifier_wrapper.rs  et_verifier_wrapper.sol  input-data.json  protocol-config.json  scores.csv  test_proof.json  test_verifier.yul  test_verifier_temp.yul
docs/: 0_attestation_station.md  1_attestations.md  2_data_processing.md  3_dynamic_sets.md  4_algorithm.md  5_beyond.md  README.md  SUMMARY.md
eigen-trust/: Cargo.toml
eigen-trust/src/: cli.rs  constants.rs  epoch.rs  lib.rs  main.rs  node.rs  peer.rs  protocol.rs
eigen-trust/src/peer/: mod.rs  opinion.rs  proof.rs  pubkey.rs  utils.rs
eigen-trust/src/protocol/: mod.rs  req_res.rs
eigentrust/: Cargo.toml
eigentrust-cli/: Cargo.toml  README.md
eigentrust-cli/assets/: attestations.csv  (+2 more)
eigentrust-zk/: Cargo.toml  README.md
eigentrust-zk/src/: lib.rs  main.rs  utils.rs
eigentrust-zk/src/circuits/: mod.rs
eigentrust-zk/src/circuits/dynamic_sets/: mod.rs  native.rs
eigentrust-zk/src/circuits/opinion/: mod.rs  native.rs
eigentrust-zk/src/circuits/threshold/: mod.rs  native.rs
eigentrust-zk/src/ecc/: mod.rs
eigentrust-zk/src/ecc/generic/: mod.rs  native.rs
eigentrust-zk/src/ecc/same_curve/: mod.rs  native.rs
eigentrust-zk/src/ecdsa/: mod.rs  native.rs
eigentrust-zk/src/eddsa/: native.rs
eigentrust-zk/src/edwards/: native.rs  params.rs
eigentrust-zk/src/gadgets/: absorb.rs  bits2integer.rs  bits2num.rs  lt_eq.rs  lt_eq_lookup.rs  main.rs  mod.rs
eigentrust-zk/src/integer/: mod.rs  native.rs
eigentrust-zk/src/merkle_tree/: mod.rs  native.rs
eigentrust-zk/src/params/ecc/: bn254.rs  mod.rs  secp256k1.rs
eigentrust-zk/src/params/hasher/: mod.rs  poseidon_bn254_10x5.rs  poseidon_bn254_5x5.rs  rescue_prime_bn254_5x5.rs
eigentrust-zk/src/params/rns/: bn256.rs  mod.rs
eigentrust-zk/src/poseidon/: mod.rs  sponge.rs
eigentrust-zk/src/poseidon/native/: mod.rs
eigentrust-zk/src/rescue_prime/: mod.rs
eigentrust-zk/src/verifier/: mod.rs
eigentrust-zk/src/verifier/aggregator/: mod.rs  native.rs
eigentrust-zk/src/verifier/loader/: mod.rs  native.rs
eigentrust-zk/src/verifier/transcript/: mod.rs  native.rs
eigentrust/src/: att_station.rs  attestation.rs  circuit.rs  error.rs  eth.rs  fs.rs  lib.rs  storage.rs
protocol/: Cargo.toml
protocol/src/: constants.rs  epoch.rs  error.rs  ethereum.rs  lib.rs  main.rs  node.rs  utils.rs
protocol/src/behaviour/: mod.rs  req_res.rs
protocol/src/manager/: attestation.rs  ivp.rs  mod.rs  prover.rs  sig.rs
protocol/src/peer/: ivp.rs  mod.rs  opinion.rs  pubkey.rs
scripts/: bootstrap1.sh  bootstrap2.sh  build-docs.sh  build-wasm.sh  clippy.sh  diff.sh  docs.sh  fmt-check.sh  init.sh  run-simulations.sh  start-node.sh  test-docs.sh  test.sh
server/: Cargo.toml
src/: epoch.rs  kd_tree.rs  lib.rs  main.rs  manager.rs  network.rs  node.rs  peer.rs  protocol.rs  utils.rs
tests/: simulations.rs
zk/: Cargo.toml
(+36 files in other folders)
