[package]
name = "eigen-trust"
version = "0.1.0"
description = "A library for managing trust in a distributed network with zero-knowledge features."
repository = "https://github.com/lazovicff/eigen-trust"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Loading from GitHub until 0.4.0 release
ark-std = { git = "https://github.com/arkworks-rs/std" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["std"]
std = [
	"ark-std/std",
	"rand/std",
]

[[test]]
name = "integration"
path = "tests/simulations.rs"
