[package]
name = "eigen-trust"
version = "0.1.0"
description = "A library for managing trust in a distributed network with zero-knowledge features."
repository = "https://github.com/lazovicff/eigen-trust"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
async-std = { version = "1.11.0", features = ["attributes"] }
async-trait = "0.1"
bs58 = "0.4.0"
clap = { version = "3.1.12", features = ["derive"] }
log = "0.4"
env_logger = "0.9.0"

[dependencies.libp2p]
version = "0.44"
default-features = false
features = [
	"request-response",
	"tcp-async-io",
	"noise",
	"yamux",
]
