[package]
name = "bench"
version = "0.1.0"
description = "Benchmarks for Eigen Trust library."
repository = "https://github.com/lazovicff/eigen-trust"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["macros"] }
futures = { version = "0.3.21", features = ["alloc"] }
env_logger = "0.9.0"
rand = "0.8"
bs58 = "0.4.0"
csv = "1"
serde = "1"

eigen-trust-protocol = { path = "../protocol" }
eigen-trust-circuit = { path = "../circuit" }