[package]
name = "eigen-trust-cli"
version = "0.1.0"
description = "CLI for Eigen Trust library."
repository = "https://github.com/lazovicff/eigen-trust"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
clap = { version = "3.1.12", features = ["derive"] }
env_logger = "0.9.0"
tokio = { version = "1.18", features = ["macros"] }

eigen-trust = { path = "../eigen-trust" }