[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "=1.0.0", features = ["ethers-solc"] }
ethers-etherscan = "=1.0.0"
rand = "0.8"
tokio = { version = "1.18", features = ["time", "macros", "rt-multi-thread", "net"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
bs58 = "0.4.0"

eigen-trust-circuit = { path = "../circuit" }
eigen-trust-protocol = { path = "../protocol" }