[package]
name = "eigen-trust-client"
version = "0.1.0"
edition = "2021"
description = "A library for managing trust in a distributed network with zero-knowledge features."
repository = "https://github.com/eigen-trust/protocol"
license = "MIT"

[dependencies]
ethers = { version = "=1.0.2", features = ["ethers-solc", "ws"] }
clap = { version = "4.2.7", features = ["derive"] }
rand = "0.8"
tokio = { version = "1.18", features = ["time", "macros", "rt-multi-thread", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
once_cell = "1.17.1"
secp256k1 = { version = "0.27.0", features = ["global-context", "recovery"] }

eigen-trust-circuit = { path = "../circuit" }
