[package]
name = "eigen-trust-client"
version = "0.1.0"
edition = "2021"
description = "A library for managing trust in a distributed network with zero-knowledge features."
repository = "https://github.com/eigen-trust/protocol"
license = "MIT"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
csv = "1.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
ethers = { version = "=1.0.2", features = ["ethers-solc", "ws"] }
log = "0.4.19"
once_cell = "1.17.1"
rand = "0.8"
reqwest = "0.11.18"
secp256k1 = { version = "0.27.0", features = ["global-context", "recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18", features = ["time", "macros", "rt-multi-thread", "net"] }

eigen-trust-circuit = { path = "../circuit" }
