[package]
name = "eigen-trust"
version = "0.2.0"
description = "A library for managing trust in a distributed network with zero-knowledge features."
repository = "https://github.com/lazovicff/eigen-trust"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli-only deps
clap = { version = "3.1.12", features = ["derive"], optional = true }
env_logger = { version = "0.9.0", optional = true }

bs58 = "0.4.0"
rand = "0.8"
futures = "0.3.21"
tokio = { version = "1.18", features = ["time", "macros", "rt-multi-thread"] }
async-trait = "0.1"
log = "0.4"

eigen-trust-circuit = { path = "../circuit" }

[dependencies.libp2p]
version = "0.44"
default-features = false
features = [
	"secp256k1",
	"identify",
	"request-response",
	"tcp-async-io",
	"noise",
	"yamux",
]

[features]
cli = ["clap", "env_logger"]

[[bin]]
name = "cli"
path = "src/cli.rs"
required-features = ["cli"]
