[package]
name = "eigen-trust"
version = "0.2.0"
description = "A library for managing trust in a distributed network with zero-knowledge features."
repository = "https://github.com/lazovicff/eigen-trust"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
rand = "0.8"
futures = "0.3.21"
tokio = { version = "1.18", features = ["time", "macros", "rt-multi-thread"] }
async-trait = "0.1"
log = "0.4"

eigen-trust-circuit = { path = "../circuit" }

[dependencies.libp2p]
version = "0.44"
default-features = false
features = [
	"secp256k1",
	"identify",
	"request-response",
	"tcp-async-io",
	"noise",
	"yamux",
]
