[package]
name = "eigentrust-zk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = { version = "0.3.0" }
rand = "0.8"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
halo2 = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20" }
blake = "2.0.2"
itertools = "0.10.3"
num-bigint = {version = "0.4.0", features = ["rand"]}
num-integer = "0.1.42"
num-traits = "0.2.11"
num-rational = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.8"

[dependencies.snark-verifier]
git = "https://github.com/privacy-scaling-explorations/snark-verifier"
rev = "e5d5e4a"
default-features = false
features = ["loader_evm", "system_halo2"]
