[package]
name = "eigentrust"
version = "0.1.0"
edition = "2021"
description = "A library for managing trust in a distributed network with zero-knowledge features."
repository = "https://github.com/eigen-trust/protocol"
license = "MIT"

[dependencies]
csv = "1.1"
ethers = "2.0.8"
log = "0.4.19"
rand = "0.8"
num-rational = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.43"
tokio = { version = "1.18", features = ["time", "macros", "rt-multi-thread", "net"] }

# Path dependencies
eigentrust-zk = { path = "../eigentrust-zk" }
